--- a/robot/log.html
+++ b/robot/log.html
@@ -1803,25 +1803,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,3006],[],[[4,0,0,[],[1,152,2852],[[0,5,6,0,7,8,0,0,[1,152,2852],[[153,2,9]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,5114],[],[[4,0,0,[],[1,162,2851],[[0,5,6,0,7,8,0,0,[1,163,2850],[[164,2,9]]]]]],[[2,10,6,0,11,0,0,0,[1,3015,2099],[]]],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test","*E:\\ICT-y4\\ict-op2022-web\\robot\\test.robot","*test.robot","*Test opening google.co.th using Chrome","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"http://localhost:4000\">http://localhost:4000\x3c/a>, chrome","*Opening browser 'chrome' to base url '<a href=\"http://localhost:4000\">http://localhost:4000\x3c/a>'."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test","*E:\\ICT-y4\\ict-op2022-web\\robot\\test.robot","*test.robot","*Test opening google.co.th using Chrome","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${url_website}/register, chrome","*Opening browser 'chrome' to base url '<a href=\"http://localhost:4000/register\">http://localhost:4000/register\x3c/a>'.","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:03","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:03","fail":0,"id":"s1","label":"Test","name":"Test","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:03","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:05","fail":0,"id":"s1","label":"Test","name":"Test","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1668779472962;
+window.output["baseMillis"] = 1668780202693;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 3012;
+window.output["generated"] = 5119;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
