--- a/robot/log.html
+++ b/robot/log.html
@@ -1803,25 +1803,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,5114],[],[[4,0,0,[],[1,162,2851],[[0,5,6,0,7,8,0,0,[1,163,2850],[[164,2,9]]]]]],[[2,10,6,0,11,0,0,0,[1,3015,2099],[]]],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,5796],[],[[4,0,0,[],[0,162,3512,5],[[0,6,7,0,8,9,0,0,[1,163,2864],[[163,2,10]]],[0,11,7,0,12,13,0,0,[1,3027,25],[]],[0,14,7,0,15,13,0,0,[1,3052,36],[[3052,2,16]]],[0,17,7,0,18,19,0,0,[1,3089,16],[[3105,2,20]]],[0,14,7,0,15,21,0,0,[0,3106,565],[[3106,2,22],[3670,2,23],[3670,5,5]]],[0,14,7,0,15,24,0,0,[3,3672,0],[]],[0,14,7,0,15,25,0,0,[3,3672,0],[]],[0,14,7,0,15,26,0,0,[3,3672,0],[]],[0,27,7,0,28,29,0,0,[3,3673,0],[]],[0,30,7,0,31,32,0,0,[3,3674,0],[]]]]],[[2,33,7,0,34,0,0,0,[1,3676,2120],[]]],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test","*E:\\ICT-y4\\ict-op2022-web\\robot\\test.robot","*test.robot","*Test opening google.co.th using Chrome","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${url_website}/register, chrome","*Opening browser 'chrome' to base url '<a href=\"http://localhost:4000/register\">http://localhost:4000/register\x3c/a>'.","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test","*E:\\ICT-y4\\ict-op2022-web\\robot\\test.robot","*test.robot","*Test case 2: user can evaluate the event.","*Element with locator '//*[@name='role']' not found.","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${url_website}/evaluation, ${browser}","*Opening browser 'Chrome' to base url '<a href=\"http://localhost:4000/evaluation\">http://localhost:4000/evaluation\x3c/a>'.","*Wait Until Element Is Visible","*<p>Waits until the element <code>locator\x3c/code> is visible.\x3c/p>","*//button[contains(text(),'เริ่มแบบสอบถาม')]","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*Clicking element '//button[contains(text(),'เริ่มแบบสอบถาม')]'.","*Page Should Contain","*<p>Verifies that current page contains <code>text\x3c/code>.\x3c/p>","*ข้อมูลทั่วไป","*Current page contains text 'ข้อมูลทั่วไป'.","*//*[@name='role']","*Clicking element '//*[@name='role']'.","*\x3c/td>\x3c/tr><tr><td colspan=\"3\"><a href=\"selenium-screenshot-12.png\"><img src=\"selenium-screenshot-12.png\" width=\"800px\">\x3c/a>","*//input[@id='gender.male']","*//input[@id='channels.muict-op-facebook']","*//input[@id='participated-activities.guidance']","*Click Button","*<p>Clicks the button identified by <code>locator\x3c/code>.\x3c/p>","*ต่อไป","*Wait Until Page Contains","*<p>Waits until <code>text\x3c/code> appears on the current page.\x3c/p>","*ระดับความพึงพอใจ","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:03","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:05","fail":0,"id":"s1","label":"Test","name":"Test","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:04","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:06","fail":1,"id":"s1","label":"Test","name":"Test","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1668780202693;
+window.output["baseMillis"] = 1668834154621;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 5119;
+window.output["generated"] = 5801;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
