--- a/robot/report.html
+++ b/robot/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,5114],[],[[4,0,0,[],[1,162,2851],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,5796],[],[[4,0,0,[],[0,162,3512,5],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test","*E:\\ICT-y4\\ict-op2022-web\\robot\\test.robot","*test.robot","*Test opening google.co.th using Chrome"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test","*E:\\ICT-y4\\ict-op2022-web\\robot\\test.robot","*test.robot","*Test case 2: user can evaluate the event.","*Element with locator '//*[@name='role']' not found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:03","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:05","fail":0,"id":"s1","label":"Test","name":"Test","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:04","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:06","fail":1,"id":"s1","label":"Test","name":"Test","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1668780202693;
+window.output["baseMillis"] = 1668834154621;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 5119;
+window.output["generated"] = 5801;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
